--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,9 +12,11 @@
     "@babel/core": "^7.21.0",
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.16",
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
