--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.282.0",
+    "aws-sdk": "^2.1329.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -18,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemon": "^2.0.20",
     "twilio": "^4.7.2"
   }
