--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.16",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "mapbox-gl": "^2.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
