--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,11 +14,12 @@
     "@heroicons/react": "^2.0.16",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
-    "mapbox-gl": "^2.13.0",
+    "daisyui": "^2.51.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "buffer": "^5.7.1",
