profile page setup

--- a/Backend/.env
+++ b/Backend/.env
@@ -10,3 +10,6 @@ JWT_SECRET= debugger-io?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxM
  SECRET_ACCESS_KEY=pRNBmzrf3puUDuAn1x0FQVYuMn1W2Z5NpaKdQzgQ
  REGION=ap-northeast-1
  BUCKET_NAME=turfspot
+
+ ADMIN_PASSWORD=123
+ ADMIN_EMAIL=admin@admin.com
