--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemon": "^2.0.20",
+    "stripe": "^11.16.0",
     "twilio": "^4.7.2"
   }
 }
