--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "assert": "^2.0.0",
     "buffer": "^5.7.1",
+    "console-browserify": "^1.2.0",
     "crypto-browserify": "^3.12.0",
     "events": "^3.3.0",
     "https-browserify": "^1.0.0",
