--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "recharts": "^2.5.0",
     "redux": "^4.2.1"
   },
   "devDependencies": {
